--- a/src/main/resources/templates/html/furever_detail.html
+++ b/src/main/resources/templates/html/furever_detail.html
@@ -165,7 +165,6 @@
                                         <div class="modal-content">
                                             <div class="modal-header">
                                                 <h6 class="modal-title">관심동물 등록</h6>
-                                                </button>
                                             </div>
                                             <div class="modal-body">
                                                 <form>
@@ -175,11 +174,11 @@
                                                 </form>
                                             </div>
                                             <div class="modal-footer">
-                                                <button id="booking" type="submit"
+                                                <button id="interest-btn" type="button"
                                                         class="btn btn-sm btn-warning"
                                                         data-dismiss="modal">확인
                                                 </button>
-                                                <button type="button" id="close"
+                                                <button id="close-btn" type="button"
                                                         class="btn btn-link text-danger ml-auto"
                                                         data-dismiss="modal">취소
                                                 </button>
@@ -197,20 +196,20 @@
                                 <div class="row">
                                     <div class="col-md-6 mb-3">
                                         <div class="form-group">
-                                            <label for="name">연락처
-                                                <span class="txt-error name"
-                                                    style="padding-left:10px; font-size:13px;"></span>
+                                            <label for="phonenum">연락처
+                                                <span class="txt-error tel"
+                                                    th:style="'padding-left:10px; font-size:13px;'"></span>
                                             </label>
-                                            <input class="form-control" id="name" type="text" value=""
+                                            <input class="form-control" id="phonenum" type="text"
                                             placeholder="숫자만 입력해주세요" autocomplete="off" required>
                                         </div>
                                     </div>
                                         <div class="col-md-6 mb-3">
                                             <div class="form-group">
-                                                <label for="email">연락가능시간<span class="txt-error email"
-                                                    style="padding-left:10px; font-size:13px;"></span></label>
-                                                <input class="form-control" id="email" type="text"
-                                                    autocomplete="off" required>
+                                                <label for="contact_time">연락가능시간<span class="txt-error time"
+                                                    th:style="'padding-left:10px; font-size:13px;'"></span></label>
+                                                <input class="form-control" id="contact_time" type="text"
+                                                    placeholder="예) 오후 3시" autocomplete="off" required>
                                             </div>
                                         </div>
                                 </div>
@@ -219,52 +218,49 @@
                                     <div class="col-md-6 mb-3">
                                         <div class="form-group">
                                             <label>거주지역</label>
-                                            <select class="custom-select" id="nationality" required>
-                                                <option value="" disabled selected style="display:none">지역
-                                                </option>
-                                                <option value="business">서울</option>
-                                                <option value="tech">인천</option>
-                                                <option value="tech">대전</option>
-                                                <option value="tech">대구</option>
-                                                <option value="tech">울산</option>
-                                                <option value="tech">부산</option>
-                                                <option value="tech">광주</option>
-                                                <option value="tech">세종</option>
-                                                <option value="tech">경기도</option>
-                                                <option value="tech">강원도</option>
-                                                <option value="tech">충청도</option>
-                                                <option value="tech">경상도</option>
-                                                <option value="tech">전라도</option>
-                                                <option value="tech">제주도</option>
+                                                <select class="custom-select" id="residence" required>
+                                                    <option value="residence" disabled selected th:style="'display:none'">지역
+                                                    </option>
+                                                    <option value="SEOUL">서울</option>
+                                                    <option value="INCHEON">인천</option>
+                                                    <option value="DAEJEON">대전</option>
+                                                    <option value="DAEGU">대구</option>
+                                                    <option value="ULSAN">울산</option>
+                                                    <option value="BUSAN">부산</option>
+                                                    <option value="GWANGJU">광주</option>
+                                                    <option value="SEJONG">세종</option>
+                                                    <option value="GYEONGGI">경기도</option>
+                                                    <option value="GANGWON">강원도</option>
+                                                    <option value="CHUNGCHEONG">충청도</option>
+                                                    <option value="GYEONGSANG">경상도</option>
+                                                    <option value="JEOLLA">전라도</option>
+                                                    <option value="JEJU">제주도</option>
                                             </select>
                                         </div>
                                     </div>
                                     <div class="col-md-6 mb-3">
                                         <div class="form-group">
-                                            <label for="email">직업<span class="txt-error email"
-                                                style="padding-left:10px; font-size:13px;"></span></label>
-                                            <input class="form-control" id="email" type="text"
-                                                placeholder="간략하게 적어주세요" autocomplete="off" required>
+                                            <label for="job">직업<span class="txt-error job"
+                                                th:style="'padding-left:10px; font-size:13px;'"></span></label>
+                                            <input class="form-control" id="job" type="text"
+                                                placeholder="간략하게 적어주세요" autocomplete="off">
                                         </div>
                                     </div>
                                 </div>
 
                                 <div class="form-group">
                                     <div class="mb-4"
-                                    style="position: relative;
-                                    width: 100%;
-                                    padding-right: 15px;
-                                    padding-left: 0px;">
+                                    th:style="'position: relative; width: 100%; padding-right: 15px; padding-left: 0px;'">
                                         <label>동물을 키워본 이력</label>
                                         <div class="form-check">
-                                            <input class="form-check-input" type="radio" name="genderRadios"
-                                                   id="gender-female" value="female" checked>
-                                            <label class="form-check-label pr-2" for="gender-female">
+                                            <input class="form-check-input" type="radio" name="breeding"
+                                                   id="breeding-Y" value="Y" checked>
+                                            <label class="form-check-label pr-2" for="breeding-Y">
                                                 존재한다
                                             </label>
-                                            <input class="form-check-input" type="radio" name="genderRadios"
-                                                   id="gender-male" value="male">
-                                            <label class="form-check-label" for="gender-male">
+                                            <input class="form-check-input" type="radio" name="breeding"
+                                                   id="breeding-N" value="N">
+                                            <label class="form-check-label" for="breeding-N">
                                                 존재하지 않는다
                                             </label>
                                         </div>
@@ -282,8 +278,8 @@
                                                       border-radius: 0.45rem;" required>안녕</textarea>
                                         </div> -->
                                         <div class="form-group">
-                                            <label for="exampleFormControlTextarea2">입양을 원하는 이유</label>
-                                            <textarea class="form-control" id="exampleFormControlTextarea2" rows="3"></textarea>
+                                            <label for="adopt_reason">입양을 원하는 이유</label>
+                                            <textarea class="form-control" id="adopt_reason" rows="3" placeholder="필수 입력 항목입니다." required></textarea>
                                         </div>
                                     </div>
                                 </div>
@@ -299,16 +295,18 @@
                                             border-radius: 0.45rem;">안녕</textarea>
                                         </div> -->
                                         <div class="form-group">
-                                            <label for="exampleFormControlTextarea2">덧붙이고 싶은 말</label>
-                                            <textarea class="form-control" id="exampleFormControlTextarea2" rows="5"></textarea>
+                                            <label for="add_comment">덧붙이고 싶은 말</label>
+                                            <textarea class="form-control" id="add_comment" rows="5"></textarea>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="mt-3">
                                     <!-- 버튼 클릭시 모달창 -->
                                     <!-- 모달 버튼-->
-                                    <button type="button" class="btn btn-warning" data-toggle="modal"
-                                            data-target="#modal-default-2" style="float: right">
+                                    <button type="button" id="reg-btn" class="btn btn-warning"
+                                            data-toggle="modal"
+                                            data-target="#modal-default-2"
+                                            th:style="'float: right'">
                                         신청하기
                                     </button>
                                     <!--모달 시작-->
@@ -319,7 +317,6 @@
                                             <div class="modal-content">
                                                 <div class="modal-header">
                                                     <h6 class="modal-title">입양신청</h6>
-                                                    </button>
                                                 </div>
                                                 <div class="modal-body">
                                                     <form>
@@ -329,7 +326,7 @@
                                                     </form>
                                                 </div>
                                                 <div class="modal-footer">
-                                                    <button id="booking" type="submit"
+                                                    <button id="adopt-btn" type="button"
                                                             class="btn btn-sm btn-warning"
                                                             data-dismiss="modal">예, 신청합니다
                                                     </button>
