--- a/src/main/resources/templates/html/furever_detail.html
+++ b/src/main/resources/templates/html/furever_detail.html
@@ -51,8 +51,8 @@
                          alt="menuimage"/>
                 </a>
                 <div>
-                    <button class="btn mb-2 mr-2 btn-warning" type="button" id="mypage-btn">마이페이지</button>
-                    <button class="btn mb-2 mr-2 btn-warning" type="button" id="board-btn">입양 후 이야기</button>
+                    <a class="btn mb-2 mr-2 btn-warning" type="button" id="mypage-btn" th:href="@{/fureverhomes/mypage/adopt}">마이페이지</a>
+                    <a class="btn mb-2 mr-2 btn-warning" type="button" id="board-btn" th:href="@{/fureverhomes/board}">입양 후 이야기</a>
                     <button class="btn mb-2 mr-2 btn-warning" type="button" id="signOut-btn">로그아웃</button>
                 </div>
             </div>
