타임리프 문법 변경

--- a/src/main/resources/templates/html/dashboard/furever_myPage_adopt.html
+++ b/src/main/resources/templates/html/dashboard/furever_myPage_adopt.html
@@ -212,7 +212,7 @@
 
     <!-- Custom js -->
     <script th:src="@{/js/headerButtons.js}"></script>
-    <script th:src="@{/js/mypage.js}"></script>
+    <script th:src="@{/js/mypage-adopt.js}"></script>
 
     <!-- Core -->
     <script th:src="@{/vendor/jquery/dist/jquery.min.js}"></script>
