--- a/src/main/resources/templates/html/furever_detail.html
+++ b/src/main/resources/templates/html/furever_detail.html
@@ -169,7 +169,7 @@
                                             <div class="modal-body">
                                                 <form>
                                                     <div class="mb-2">
-                                                        <label class="col-form-label">관심동물로 등록되었습니다<br> 마이페이지에서 확인하실 수 있습니다!</label>
+                                                        <label class="col-form-label">관심동물은 마이페이지에서 확인하실 수 있습니다!</label>
                                                     </div>
                                                 </form>
                                             </div>
