게시글 다중 이미지 업로드 기능

--- a/src/main/resources/templates/html/furever_board.html
+++ b/src/main/resources/templates/html/furever_board.html
@@ -208,7 +208,7 @@
                                 </div>
                                 <textarea name="description" class="form-control border" rows="6" data-bind-characters-target="#charactersRemaining" maxlength="1000"></textarea>
                                 <div class="d-flex justify-content-between mt-3">
-                                    <a href="../html/furever_board_list.html" button type="button" class="btn btn-outline-warning animate-up-2">
+                                    <a th:href="@{/fureverhomes/board}" button type="button" class="btn btn-outline-warning animate-up-2">
                                         <span
                                         class="icon icon-xs ml-auto"><span
                                         class="fas fa-chevron-left"></span></span> 목록으로</a>
