--- a/src/main/resources/static/css/spaces.css
+++ b/src/main/resources/static/css/spaces.css
@@ -6981,6 +6981,23 @@ input[type="button"].btn-block {
     margin-bottom: 0;
 }
 
+.custom-file2 {
+    position: relative;
+    display: inline-block;
+    width: 92%;
+    height: calc(1.5em + 1.2625rem);
+    margin-bottom: 0;
+}
+
+.custom-file-input2 {
+    position: relative;
+    z-index: 2;
+    width: 92%;
+    height: calc(1.5em + 1.2625rem);
+    margin: 0;
+    opacity: 0;
+}
+
 .custom-file-input {
     position: relative;
     z-index: 2;
